toml-pretty-deser/compilation_failure_tests/nested_and_with.stderr
error: field cannot have both #[tpd(nested)] and #[tpd(with = "...")]
 --> compilation_failure_tests/nested_and_with.rs:7:13
  |
7 |     nested: Inner,
  |             ^^^^^
